--- a/test/test-advanced.html
+++ b/test/test-advanced.html
@@ -4,7 +4,7 @@
 
 <script>
   var startTime = Date.now();
-  jspm.import('github:guybedford/jquery@2.0.4/src/jquery', function($) {
+  jspm.import('github:jquery/jquery@master/jquery', function($) {
     document.body.innerHTML += 'Loaded in ' + (Date.now() - startTime) + 'ms.';
   });
 </script>
