--- a/test/test-dynamic1.html
+++ b/test/test-dynamic1.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src="https://jspm.io/loader.js"></script>
+  <script src="../../es6-module-loader/lib/es6-module-loader.js"></script>
+  <script src="../loader.js"></script>
   <script>
     jspm.import('npm:spinning', function(Spinning) {
       var spinner = Spinning().text('loading...').light().size(200);
