shim config and main config changes

--- a/test/test-advanced.html
+++ b/test/test-advanced.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
-<script src="https://jspm.io/loader.js"></script>
+<script src="../../es6-module-loader/lib/es6-module-loader.js"></script>
+  <script src="../loader.js"></script>
 
 <script>
   var startTime = Date.now();
