--- a/test/test.html
+++ b/test/test.html
@@ -4,11 +4,6 @@
 <script src="../loader.js" type="text/javascript"></script>
 
 <script>
-  jspm.config({
-    locations: {
-      plugin: '../../jspm-plugins'
-    }
-  });
 
   jspm.import('./test-runner', function(runner) {
     runner.execute([
@@ -234,7 +229,7 @@
         run: function(complete) {
           jspm.config({
             map: {
-              'plugin:coffee': './tests/compiler-plugin'
+              '!coffee': './tests/compiler-plugin'
             }
           });
           jspm.import(['./tests/compiler-test.coffee!'], complete);
@@ -244,16 +239,6 @@
             return 'Plugin not working.';
           if (m.extra != 'yay!')
             return 'Compiler not working.';
-        }
-      },
-      {
-        name: 'Handlebars plugin',
-        run: function(complete) {
-          jspm.import('./tests/hbs.hbs!', complete);
-        },
-        confirm: function(m) {
-          if (m({ title: 'hello' }) != '<h1>hello</h1>\n')
-            return 'Handlebars template not compiled';
         }
       },
       {
@@ -298,6 +283,16 @@
           jspm.import('#google Port Lligat Slab !font', complete);
         },
         confirm: function(m) {
+        }
+      },
+      {
+        name: 'Handlebars plugin',
+        run: function(complete) {
+          jspm.import('./tests/hbs.hbs!', complete);
+        },
+        confirm: function(m) {
+          if (m({ title: 'hello' }) != '<h1>hello</h1>\n')
+            return 'Handlebars template not compiled';
         }
       },
       {
