--- a/test/test.html
+++ b/test/test.html
@@ -8,12 +8,12 @@
     urlArgs: '?test'
   });
 
-  jspm.import('./test-runner', function(runner) {
+  jspm.import('~/test-runner', function(runner) {
     runner.execute([
       {
         name: 'Wrapper module support',
         run: function(complete) {
-          jspm.import('./tests/wrapper', complete);
+          jspm.import('~/tests/wrapper', complete);
         },
         confirm: function(m) {
           if (m != 'default1')
@@ -28,34 +28,34 @@
             if (m1 && m2 && m3 && m4 && err)
               complete(m1, m2, m3, m4);
           }
-          jspm.import(['./tests/default1'], function(_m1) {
+          jspm.import(['~/tests/default1'], function(_m1) {
             if (m1 === undefined)
               m1 = null;
             else
               m1 = _m1;
             checkComplete();
           });
-          jspm.import(['./tests/default1'], function(_m1) {
+          jspm.import(['~/tests/default1'], function(_m1) {
             if (m1 === undefined)
               m1 = null;
             else
               m1 = _m1;
             checkComplete();
           });
-          jspm.import(['./tests/default2'], function(_m2) {
+          jspm.import(['~/tests/default2'], function(_m2) {
             m2 = _m2;
             checkComplete();
           });
-          jspm.import(['./tests/asdf'], function() {
+          jspm.import(['~/tests/asdf'], function() {
           }, function(_err) {
             err = _err;
             checkComplete();
           });
-          jspm.import('./tests/default3', function(_m3) {
+          jspm.import('~/tests/default3', function(_m3) {
             m3 = _m3;
             checkComplete();
           });
-          jspm.import('./tests/module', function(_m4) {
+          jspm.import('~/tests/module', function(_m4) {
             m4 = _m4;
             checkComplete();
           });
@@ -74,7 +74,7 @@
       {
         name: 'Error handling',
         run: function(complete) {
-          jspm.import('./tests/error', complete);
+          jspm.import('~/tests/error', complete);
         },
         confirm: function() {
           return;
@@ -83,7 +83,7 @@
       {
         name: 'Global script loading',
         run: function(complete) {
-          jspm.import(['./tests/global'], complete);
+          jspm.import(['~/tests/global'], complete);
         },
         confirm: function(m) {
           if (!m.jQuery || !m.another)
@@ -93,7 +93,7 @@
       {
         name: 'Global script with multiple objects the same',
         run: function(complete) {
-          jspm.import(['./tests/global-multi'], complete);
+          jspm.import(['~/tests/global-multi'], complete);
         },
         confirm: function(m) {
           if (m.jquery != 'here')
@@ -101,41 +101,49 @@
         }
       },
       {
-        name: 'Global script loading with imports',
+        name: 'Shim with imports',
         run: function(complete) {
           jspm.config({
-            shim: {
-              './tests/global-with-dep': ['./global-dep']
-            }
-          });
-          jspm.import(['./tests/global-with-dep'], complete);
-        },
-        confirm: function(m) {
-          if (m != '1.8.3')
-            return 'Global dependency not defined';
-        }
-      },
-      {
-        name: 'Global script loading with inline imports',
-        run: function(complete) {
-          jspm.import('./tests/global-inline-dep', complete);
-        },
-        confirm: function(m) {
-          if (m != '1.8.3')
-            return 'Global dependency not defined';
-        }
-      },
-      {
-        name: 'Global script with export specified',
-        run: function(complete) {
-          jspm.config({
-            shim: {
-              './tests/global-with-export': {
-                exports: 'window.q.r'
+            packages: {
+              '~': {
+                shim: {
+                  'tests/global-with-dep': ['./global-dep']
+                }
               }
             }
           });
-          jspm.import(['./tests/global-with-export'], complete);
+          jspm.import(['~/tests/global-with-dep'], complete);
+        },
+        confirm: function(m) {
+          if (m != '1.8.3')
+            return 'Global dependency not defined';
+        }
+      },
+      {
+        name: 'Global script loading with inline shim',
+        run: function(complete) {
+          jspm.import('~/tests/global-inline-dep', complete);
+        },
+        confirm: function(m) {
+          if (m != '1.8.3')
+            return 'Global dependency not defined';
+        }
+      },
+      {
+        name: 'Wildcard shim with export specified',
+        run: function(complete) {
+          jspm.config({
+            packages: {
+              '~': {
+                shim: {
+                  'tests/global-with-*': {
+                    exports: 'window.q.r'
+                  }
+                }
+              }
+            }
+          });
+          jspm.import(['~/tests/global-with-export'], complete);
         },
         confirm: function(m) {
           if (m != 'r')
@@ -145,7 +153,7 @@
       {
         name: 'Global script with inline exports',
         run: function(complete) {
-          jspm.import('./tests/global-inline-export', complete);
+          jspm.import('~/tests/global-inline-export', complete);
         },
         confirm: function(m) {
           if (m != 'r')
@@ -168,83 +176,68 @@
         }
       },
       {
-        name: 'Endpoint config with custom main normalize',
-        run: function(complete) {
-          jspm.config({
-            endpoints: {
-              'ep': {
-                location: './tests/ep',
-                normalize: function(name) {
-                  if (name.split('/').length == 1)
-                    name = name + '/main'
-                  return name;
-                }
-              }
-            }
-          });
-          jspm.import(['ep:some-repo'], complete);
-        },
-        confirm: function(m) {
-          if (!m.main)
-            return 'incorrect module';
-        }
-      },
-      {
         name: 'Map configuration',
         run: function(complete) {
           jspm.config({
             map: {
-              'maptest': './tests/map-test'
+              'maptest': '~/tests/map-test'
             }
           });
-          jspm.import(['maptest'], complete)
-        },
-        confirm: function(m) {
-          if (m.maptest != 'maptest')
-            return 'Mapped module not loaded';
-        }
-      },
-      {
-        name: 'Map main configuration',
-        run: function(complete) {
-          jspm.config({
-            map: {
-              mapmain: './tests/my-app'
-            },
-            main: {
-              './tests/my-app': 'main'
-            }
-          });
-          jspm.import(['mapmain', 'mapmain/submodule'], complete)
+          jspm.import(['maptest', 'maptest/sub'], complete)
         },
         confirm: function(m1, m2) {
-          if (!m1.isMain)
-            return 'Main module not loaded';
-          if (!m2.isSubmodule)
-            return 'Submodule not loaded';
+          if (m1.maptest != 'maptest')
+            return 'Mapped module not loaded';
+          if (m2.maptest != 'maptestsub')
+            return 'Mapped folder not loaded';
         }
       },
       {
-        name: 'Package map configuration',
+        name: 'Wildcard Map Configuration',
         run: function(complete) {
           jspm.config({
             map: {
-              './tests/my-app': {
-                'jquery': './tests/my-app/jquery-mapped'
+              'wild/card.*.*': '~/tests/wildcard-test/*',
+              'wild/card.second.*': '~/tests/wildcard-test/2'
+            }
+          });
+          jspm.import(['wild/card.first.here', 'wild/card.second.here', 'wild/card.second.here/sub'], complete);
+        },
+        confirm: function(m1, m2, m3) {
+          if (!m1 || !m2 || !m3)
+            return 'Failed';
+        }
+      },
+      {
+        name: 'Package Configuration',
+        run: function(complete) {
+          jspm.config({
+            packages: {
+              '~/tests/mypackage': {
+                main: 'index',
+                format: 'global',
+                map: {
+                  'bar': './lib/bar'
+                },
+                shim: {
+                  'src/*': ['bar']
+                }
               }
             }
           });
-          jspm.import(['./tests/my-app/map-test'], complete);
+          jspm.import(['~/tests/mypackage', '~/tests/mypackage/src/foo'], complete);
         },
-        confirm: function(m) {
-          if (!m.mapDep)
+        confirm: function(m1, m2) {
+          if (m1 != 'bar')
             return 'Mapped package dependency not loaded';
+          if (m2 != 'foo')
+            return 'Sub dependency not loaded';
         }
       },
       {
         name: 'Loading an AMD module',
         run: function(complete) {
-          jspm.import(['./tests/amd-module'], complete);
+          jspm.import(['~/tests/amd-module'], complete);
         },
         confirm: function(m) {
           if (m.amd != true)
@@ -266,7 +259,14 @@
       {
         name: 'Loading AMD CommonJS form',
         run: function(complete) {
-          jspm.import(['./tests/amd-cjs-module'], complete);
+          jspm.config({
+            packages: {
+              '~/tests/amd-cjs-module': {
+                shim: 'amd'
+              }
+            }
+          });
+          jspm.import(['~/tests/amd-cjs-module'], complete);
         },
         confirm: function(m) {
           if (m.test != 'hi')
@@ -276,7 +276,7 @@
       {
         name: 'Loading a CommonJS module',
         run: function(complete) {
-          jspm.import(['./tests/common-js-module'], complete);
+          jspm.import(['~/tests/common-js-module'], complete);
         },
         confirm: function(m) {
           if (m.hello != 'world')
@@ -288,7 +288,7 @@
       {
         name: 'Loading a UMD module',
         run: function(complete) {
-          jspm.import(['./tests/umd'], complete);
+          jspm.import(['~/tests/umd'], complete);
         },
         confirm: function(m) {
           if (m.d != 'hi')
@@ -300,10 +300,10 @@
         run: function(complete) {
           jspm.config({
             map: {
-              'coffee': './tests/compiler-plugin'
+              'coffee': '~/tests/compiler-plugin'
             }
           });
-          jspm.import(['./tests/compiler-test.coffee!'], complete);
+          jspm.import(['~/tests/compiler-test.coffee!'], complete);
         },
         confirm: function(m) {
           if (m.output != 'plugin output')
@@ -315,7 +315,7 @@
       {
         name: 'Text plugin',
         run: function(complete) {
-          jspm.import('./tests/some-text.txt!text', complete);
+          jspm.import('~/tests/some-text.txt!text', complete);
         },
         confirm: function(m) {
           if (m != 'this is some text\n')
@@ -325,7 +325,7 @@
       {
         name: 'JSON plugin',
         run: function(complete) {
-          jspm.import('./tests/some-json.json!', complete);
+          jspm.import('~/tests/some-json.json!', complete);
         },
         confirm: function(m) {
           if (m.some != 'json')
@@ -343,7 +343,7 @@
       {
         name: 'CSS plugin',
         run: function(complete) {
-          jspm.import('./tests/css.css!', complete);
+          jspm.import('~/tests/css.css!', complete);
         },
         confirm: function(m) {
         }
@@ -362,13 +362,13 @@
           jspm.config({
             onLoad: complete
           });
-          jspm.import(['./tests/normalize-hook-test']);
+          jspm.import(['~/tests/normalize-hook-test']);
         },
         confirm: function(name, source, options) {
           jspm.config({
             onLoad: null
           });
-          if (name != './tests/normalize-hook-test')
+          if (name != '~/tests/normalize-hook-test')
             return 'normalize hook has incorrect name';
           if (source != '"hello world";')
             return 'invalid source';
