--- a/test/test-bootstrap.html
+++ b/test/test-bootstrap.html
@@ -3,7 +3,7 @@
 <head>
   <script src="../../es6-module-loader/lib/es6-module-loader.js"></script>
   <script src="../loader.js"></script>
-  <link rel="stylesheet" href="https://github.jspm.io/twbs/bootstrap@3.0.2/dist/css/bootstrap.css" />
+  <link rel="stylesheet" href="https://github.jspm.io/twbs/bootstrap@3.0.2/css/bootstrap.css" />
   <script>
     jspm.import('bootstrap@3.0.2', function() {
     });
