syntax corrections, uglification improvements

--- a/test/test.html
+++ b/test/test.html
@@ -4,7 +4,8 @@
   // window.Promise = null
 </script>
 <script src="../../es6-module-loader/lib/es6-module-loader.js" type="text/javascript"></script>
-<script src="../dist/system-jspm.js" type="text/javascript"></script>
+<!-- <script src="../dist/system-jspm.js" type="text/javascript"></script> -->
+<script src="../dist/system-jspm.min.js" type="text/javascript"></script>
 
 <script>
   System.import('~/test-runner').then(function(runner) {
